packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__transform_element__component_dynamic_props_before_static_prop.snap
---
source: tests/vapor/transform_element.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
(() => {
  const n0 = _createComponent(Foo, { $: [() => obj, { id: () => "foo" }] }, null, true);
  return n0;
})();
