packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__transform_element__component_event_with_once_modifier.snap
---
source: tests/vapor/transform_element.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
(() => {
  const n0 = _createComponent(Foo, { onFooOnce: () => bar }, null, true);
  return n0;
})();
