packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__transform_element__component_import_resolve_component.snap
---
source: tests/vapor/transform_element.rs
expression: code
---
import { createComponentWithFallback as _createComponentWithFallback } from "vue-jsx-vapor";
import { resolveComponent as _resolveComponent } from "vue";
(() => {
  const _component_Foo = _resolveComponent("Foo");
  const n0 = _createComponentWithFallback(_component_Foo, null, null, true);
  return n0;
})();
