packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__transform_element__component_props_merging_style.snap
---
source: tests/vapor/transform_element.rs
expression: code
---
import { createComponent as _createComponent } from "/vue-jsx-vapor/vapor";
(() => {
  const n0 = _createComponent(Foo, { style: () => ["color: green", { color: "red" }] }, null, true);
  return n0;
})();
