packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__transform_element__component_static_props.snap
---
source: tests/vapor/transform_element.rs
expression: code
---
import { createComponent as _createComponent } from "/vue-jsx-vapor/vapor";
(() => {
  const n0 = _createComponent(Foo, {
    id: () => "foo",
    class: () => "bar"
  }, null, true);
  return n0;
})();
